--- a/UIs/nFocalSpot.ui
+++ b/UIs/nFocalSpot.ui
@@ -632,7 +632,7 @@
          <number>4</number>
         </property>
         <item row="0" column="1" colspan="2">
-         <widget class="QDoubleSpinBox" name="doubleSpinBox">
+         <widget class="QDoubleSpinBox" name="blur_radius_sb">
           <property name="value">
            <double>10.000000000000000</double>
           </property>
@@ -646,13 +646,13 @@
          </widget>
         </item>
         <item row="1" column="2">
-         <widget class="QCheckBox" name="checkBox">
+         <widget class="QCheckBox" name="show_decimated_cb">
           <property name="text">
            <string>Show blurred</string>
           </property>
          </widget>
         </item>
-        <item row="4" column="0" colspan="3">
+        <item row="3" column="0" colspan="3">
          <spacer name="verticalSpacer">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -669,13 +669,6 @@
          <widget class="QLabel" name="label_3">
           <property name="text">
            <string>Blur radius</string>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="0">
-         <widget class="QCheckBox" name="show_cmap_cb">
-          <property name="text">
-           <string>Show cmap</string>
           </property>
          </widget>
         </item>
