--- a/UIs/neutrino.ui
+++ b/UIs/neutrino.ui
@@ -220,6 +220,7 @@
     </property>
     <addaction name="actionAbout"/>
     <addaction name="actionKeyborard_shortcuts"/>
+    <addaction name="actionLog_window"/>
    </widget>
    <widget class="QMenu" name="menuPython">
     <property name="enabled">
@@ -804,7 +805,7 @@
   </action>
   <action name="actionPoint">
    <property name="icon">
-    <iconset resource="../resources/icons/icons.qrc">
+    <iconset resource="../../neutrino-build/src/icons.qrc">
      <normaloff>:/icons/center.png</normaloff>:/icons/center.png</iconset>
    </property>
    <property name="text">
@@ -844,7 +845,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../resources/icons/icons.qrc">
+    <iconset resource="../../neutrino-build/src/icons.qrc">
      <normaloff>:/icons/lockOpen.png</normaloff>
      <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
    </property>
@@ -857,7 +858,7 @@
   </action>
   <action name="actionPython">
    <property name="icon">
-    <iconset resource="../resources/icons/icons.qrc">
+    <iconset resource="../../neutrino-build/src/icons.qrc">
      <normaloff>:/icons/python.png</normaloff>:/icons/python.png</iconset>
    </property>
    <property name="text">
@@ -866,7 +867,7 @@
   </action>
   <action name="actionOperator">
    <property name="icon">
-    <iconset resource="../resources/icons/icons.qrc">
+    <iconset resource="../../neutrino-build/src/icons.qrc">
      <normaloff>:/icons/math.png</normaloff>:/icons/math.png</iconset>
    </property>
    <property name="text">
@@ -891,6 +892,11 @@
     <string>Contours</string>
    </property>
   </action>
+  <action name="actionLog_window">
+   <property name="text">
+    <string>Log window</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -900,7 +906,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../resources/icons/icons.qrc"/>
+  <include location="../../neutrino-build/src/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
