--- a/UIs/nCamera.ui
+++ b/UIs/nCamera.ui
@@ -44,7 +44,7 @@
     </item>
     <item row="1" column="0" colspan="3">
      <widget class="QWidget" name="widget" native="true">
-      <layout class="QGridLayout" name="gridLayout_2" columnstretch="1,0,0">
+      <layout class="QGridLayout" name="gridLayout_2" columnstretch="1,0,0,0">
        <property name="leftMargin">
         <number>0</number>
        </property>
@@ -57,15 +57,18 @@
        <property name="bottomMargin">
         <number>0</number>
        </property>
-       <item row="0" column="0">
-        <widget class="QPushButton" name="grab">
+       <item row="0" column="2">
+        <widget class="QCheckBox" name="gray">
          <property name="font">
           <font>
            <pointsize>10</pointsize>
           </font>
          </property>
          <property name="text">
-          <string>Grab</string>
+          <string>Gray</string>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
@@ -84,15 +87,30 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="2">
-        <widget class="QCheckBox" name="gray">
+       <item row="0" column="0">
+        <widget class="QPushButton" name="grab">
          <property name="font">
           <font>
            <pointsize>10</pointsize>
           </font>
          </property>
          <property name="text">
-          <string>Gray</string>
+          <string>Grab</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
+        <widget class="QSpinBox" name="timeLapse">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="suffix">
+          <string>s</string>
+         </property>
+         <property name="maximum">
+          <number>999</number>
          </property>
          <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
