--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -30,7 +30,10 @@ body {
   font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	color: #232323;
-	background-color: #FBFAF7;
+
+	/* no talpa-stanca
+	background-color: #FBFAF7;*/
+	background-color: white;
 	margin: 0;
 	line-height: 1.8em;
 	-webkit-font-smoothing: antialiased;
@@ -211,25 +214,34 @@ td {
   width:960px;
 }
 
+/* Mainpage -- alex */
+.mainpage {
+  width:960px;
+  margin: 0 auto;
+}
+
 
 /* Header */
 
 header {
-	background-color: #171717;
-	color: #FDFDFB;
+	/*background-color: #171717;*/
+	/*color: #FDFDFB;*/
   width:170px;
   float:left;
   position:fixed;
-	border: 1px solid #000;
+	/*border: 1px solid #000;
 	-webkit-border-top-right-radius: 4px;
 	-webkit-border-bottom-right-radius: 4px;
 	-moz-border-radius-topright: 4px;
 	-moz-border-radius-bottomright: 4px;
 	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;
+	border-bottom-right-radius: 4px; */
 	padding: 34px 25px 22px 50px;
-	margin: 30px 25px 0 0;
+	margin: 5px 25px 0 0;
 	-webkit-font-smoothing: antialiased;
+
+	/* alex */
+	text-align: center;
 }
 
 p.header {
@@ -246,8 +258,13 @@ h1.header {
 }
 
 
-h1.header, a.header, a.name, header a{
+a.header, a.name, header a{
 	color: #fff;
+}
+
+/* alex */
+h1.header {
+	color: black;
 }
 
 a.header {
