--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -163,6 +163,12 @@ p img {
   border: none;
 }
 
+/* alex */
+.center-image {
+	margin: 0 auto;
+	display: block;
+}
+
 /* Code blocks */
 
 code, pre {
