--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Neutrino by aflux</title>
+    <title>{{ page.title }}</title>
 
 {% include base.html %}
 	<link rel="stylesheet" href="{{base}}/stylesheets/styles.css">
